--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "org.jetbrains.anko:anko:0.10.8"
     implementation 'com.roughike:bottom-bar:2.3.1'
+    implementation("com.squareup.okhttp3:okhttp:3.8.1")
+    implementation("com.google.code.gson:gson:2.2.4")
 }
