--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.roughike:bottom-bar:2.3.1'
     implementation("com.squareup.okhttp3:okhttp:3.8.1")
     implementation("com.google.code.gson:gson:2.2.4")
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
