--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
             android:name=".ui.activity.VideoPlayerActivity"
             android:screenOrientation="landscape" />
         <activity android:name=".ui.activity.AudioPlayerActivity" />
+
+        <service android:name=".service.AudioService" />
     </application>
 
 </manifest>
